[package]
name = "miniredis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.2.1"
atoi = "1.0.0"



[dev-dependencies]
criterion = "0.3.6"
jemalloc-ctl = "0.5.0"
jemallocator = "0.5.0"

[[bench]]
name = "binarytree"
path = "./benches/binarytree.rs"
harness = false

[[bench]]
name = "heap"
path = "./benches/heap.rs"
harness = false

